--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<packaging>pom</packaging>
 	<groupId>ada</groupId>
 	<artifactId>imobiliaria</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<modules>
+		<module>imoveis</module>
+	</modules>
 	<name>Imobiliaria Sempre em Casa</name>
 	<description>Projeto baseado em microsserviços que gerencia as transações de locação de uma imobiliária</description>
 	<properties>
