--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<artifactId>imobiliaria</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<modules>
-		<module>imoveis</module>
+		<module>imovel</module>
 	</modules>
 	<name>Imobiliaria Sempre em Casa</name>
 	<description>Projeto baseado em microsserviços que gerencia as transações de locação de uma imobiliária</description>
